# carnivores-ce-renderer

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CELocalPlayerController.cpp  CLAUDE.md  CMakeLists.txt  CarnivoresRenderer.sln  CarnivoresRenderer.vcxproj  CarnivoresRenderer.vcxproj.filters  Info.plist  LICENSE  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  makefile  sound.cpp
.github/workflows/: cmake-multi-platform.yml  create-release.yml
CE Character Lab/: AI_Allosaurus.cpp  C2AnimatableModel.cpp  C2AnimatableModel.h  C2Animation.cpp  C2Animation.h  C2CarFile.cpp  C2CarFile.h  C2CarFilePreloader.h  C2Character.cpp  C2Character.h  C2Geometry.cpp  C2Geometry.h  C2HuntableCharacter.cpp  C2MapFile.cpp  C2MapFile.h  C2MapRscFile.cpp  C2MapRscFile.h  C2Sky.cpp  C2Sky.h  C2SoundFX.cpp  C2SoundFX.h  C2Texture.cpp  C2Texture.h  C2WorldModel.cpp  C2WorldModel.h  CEAnimatableModel.cpp  CEAnimatableModel.h  CEAnimation.h  CEAudioSource.cpp  CEAudioSource.hpp  CEBSPTree.cpp  CEBSPTree.hpp  CEGeometry.cpp  CEGeometry.h  CELocalPlayerController.cpp  CELocalPlayerController.hpp  CEMap.cpp  CEMap.h  CEMapBlock.cpp  CEMapBlock.h  (+63 more)
CE Character Lab.xcodeproj/: project.pbxproj
CE Character Lab.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CE Character Lab.xcodeproj/project.xcworkspace/xcuserdata/tminard.xcuserdatad/: UserInterfaceState.xcuserstate
CE Character Lab.xcodeproj/project.xcworkspace/xcuserdata/tminard.xcuserdatad/xcdebugger/: Expressions.xcexplist
CE Character Lab.xcodeproj/project.xcworkspace/xcuserdata/tylerminard.xcuserdatad/: UserInterfaceState.xcuserstate
CE Character Lab.xcodeproj/xcuserdata/tminard.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CE Character Lab.xcodeproj/xcuserdata/tminard.xcuserdatad/xcschemes/: CE Character Lab.xcscheme  xcschememanagement.plist
CE Character Lab.xcodeproj/xcuserdata/tylerminard.xcuserdatad/xcschemes/: xcschememanagement.plist
CE Character Lab/day_cloudtop/: cloudtop_bk.tga  cloudtop_ft.tga  cloudtop_lf.tga  cloudtop_rt.tga
CE Character Lab/resources/: basicShader.fs  simple_geo.vs
CE Character Lab/resources/game/c1/: AREA1.PRJ  AREA2.GRP  AREA3.GRP  AREA3.MAP  AREA3.PRJ  AREA6.GRP  AREA6.MAP  AREA6.PRJ
CE Character Lab/resources/game/cdh/areas/: area2.rst  area3.rst  area6.rst  trophy.rst
CE Character Lab/resources/game/cdh/characters/: amargasaurus.cat  ankylo1.cat  brachi1.cat  carnotaurus.cat  (+19 more)
CE Character Lab/resources/game/ice/: trophy.mtc
CE Character Lab/resources/shaders/: basic_shader.fs  basic_shader.vs  sh_world_terrain_underwater.fs  sh_world_terrain_underwater.vs  simple_geo.fs  simple_geo.vs  sky.fs  sky_clouds.fs  terrain.fs  terrain.vs  water_surface.fs  water_surface.vs
include/GL/: glcorearb.h
include/GLFW/: glfw3.h
include/glad/: glad.h
res/: Notes.rtf
res/game/c1/: AREA2.PRJ  AREA4.MAP  AREA4.PRJ  AREA5.GRP  AREA5.PRJ
res/game/cdh/areas/: area1.rst  area4.rst  area5.rst  area7.rst
res/game/cdh/characters/: allo.cat  cerato1.cat  dimet.cat  dimor2.cat  oviraptor.cat  pistol.cat  shotgun.cat  sniper.cat  spino.cat
res/game/cdh/fonts/: lith18.fnthd  ofs15.fnthd  ofs26.tga
res/game/ice/: trophy.prj
res/shaders/: basic_shader.vs  simple_geo.vs  sky_clouds.vs  terrain.fs  terrain.vs  water_surface.fs  water_surface.vs
runtime/: config.json  config.json.example  readme.md
runtime/cce/: Notes.rtf
runtime/cce/game/c1/: AREA1.GRP  AREA1.MAP  AREA1.PRJ  AREA2.PRJ  AREA3.PRJ  AREA4.GRP  AREA4.PRJ  AREA5.PRJ  AREA6.PRJ  area5.map
runtime/cce/game/c2/: ALLO.CAR
runtime/cce/game/fallen/: trophy.grp  trophy.mtc  trophy.prj
runtime/cce/game/ice/: trophy.prj
runtime/cce/game/mandibles/: TROPHY.RSC  area2.grp  area2.mtc  area2.prj  area6.grp  area6.mtc  area6.prj
runtime/cce/game/models/: ALLO.CAR  ANKY SEINFELD.CAR  Bear.car  DBSGUN.CAR  GALL.CAR  MOON.car  PAR2.CAR  SNIPER.CAR  SPINO.CAR  Smilo.car  Sship1.car  Wcircle2.car  Wind.car  bag1.car  binocul.car  c1dyno.car  compas.car  pach.car  pistol.car  poacher.car  ptero2.car  rifle.car  seismo.car  shotgun.car  stego.car  sun2.car  tirex.car  velo2.car  x_bow.car
runtime/cce/game/plus/: AREA2.grp  AREA2.mtc  AREA2.prj  AREA6.PRJ  TROPHY.RSC  TROPHY.grp  TROPHY.mtc  TROPHY.prj  area1.grp  area1.mtc  area1.prj  area3.grp  area3.mtc  area3.prj  area4.grp  area4.mtc  area4.prj  area5.grp  area5.mtc  area5.prj  area6.grp  area6.mtc  area7.grp  area7.mtc  area7.prj
runtime/cce/game/triassic/: TROPHY.RSC  area1.mtc  area1.prj  area2.grp  area2.mtc  area2.prj  area3.grp  area3.mtc  area3.prj  area4.mtc  area4.prj  area5.grp  area5.mtc  area5.prj  area6.grp  area6.mtc  area6.prj  area7.grp  area7.mtc  area7.prj  area8.grp  area8.mtc  area8.prj  trophy.mtc  trophy.prj
runtime/cce/shaders/: basic_shader.fs  basic_shader.vs  dinosaur.fs  dinosaur.vs  fog_volume.fs  fog_volume.vs  object_shadow.fs  object_shadow.vs  particle.fs  particle.vs  shadow_depth.fs  shadow_depth.vs  simple_geo.fs  simple_geo.vs  sky.fs  sky.vs  sky_clouds.fs  sky_clouds.vs  terrain.fs  terrain.vs  text.fs  text.vs  ui.fs  ui.vs  visualize_normal.fs  water_surface.fs  water_surface.vs
src/: AI_Allosaurus.cpp  AI_Allosaurus.h  C23DFFile.cpp  C23DFFile.h  C2CarFile.cpp  C2CarFile.h  C2CarFilePreloader.cpp  C2CarFilePreloader.h  C2Character.cpp  C2Character.h  C2HuntableCharacter.h  C2MapFile.cpp  C2MapFile.h  C2MapRscFile.cpp  C2MapRscFile.h  C2Sky.cpp  C2Sky.h  CEAIGenericAmbientManager.cpp  CEAIGenericAmbientManager.hpp  CEAnimatableModel.cpp  CEAnimatableModel.h  CEAnimation.cpp  CEAnimation.h  CEAudioSource.cpp  CEAudioSource.hpp  CEBasePlayerController.cpp  CEBasePlayerController.hpp  CEBulletDebugDraw.cpp  CEBulletDebugDraw.h  CEBulletHeightfield.cpp  CEBulletHeightfield.h  CEBulletPlayerController.cpp  CEBulletPlayerController.h  CEBulletProjectile.cpp  CEBulletProjectile.h  CEBulletProjectileManager.cpp  CEBulletProjectileManager.h  CECapsuleCollision.cpp  CECapsuleCollision.h  CEGeometry.cpp  (+68 more)
src/dependency/libAF/: af2-animation.h  af2-loader.h  af2-sound.h  loader.cpp  sound.cpp
src/helpers/: RootDir.h
(+939 files in other folders)
